--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@formatjs/intl-localematcher": "^0.4.2",
+    "@mui/icons-material": "^5.14.13",
+    "@mui/material": "^5.14.13",
+    "classnames": "^2.3.2",
     "negotiator": "^0.6.3",
     "next": "13.5.4",
     "next-themes": "^0.2.1",
