--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@mui/icons-material": "^5.14.13",
     "@mui/material": "^5.14.13",
     "classnames": "^2.3.2",
+    "framer-motion": "^10.16.4",
     "negotiator": "^0.6.3",
     "next": "13.5.4",
-    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.69.3"
