--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.5.2",
     "sass": "^1.69.3"
   },
   "devDependencies": {
