--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
     "@formatjs/intl-localematcher": "^0.4.2",
     "@mui/icons-material": "^5.14.13",
     "@mui/material": "^5.14.13",
+    "@react-google-maps/api": "^2.19.2",
+    "axios": "^1.5.1",
     "classnames": "^2.3.2",
+    "debug": "^4.3.4",
     "framer-motion": "^10.16.4",
     "negotiator": "^0.6.3",
     "next": "13.5.4",
+    "next-auth": "^4.24.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.47.0",
     "react-intersection-observer": "^9.5.2",
     "sass": "^1.69.3"
   },
